@@ -1,6 +1,6 @@
 /*
  * DBeaver - Universal Database Manager
- * Copyright (C) 2010-2024 DBeaver Corp and others
+ * Copyright (C) 2010-2025 DBeaver Corp and others
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -23,7 +23,6 @@ import org.jkiss.dbeaver.Log;
 import org.jkiss.dbeaver.ext.generic.GenericConstants;
 import org.jkiss.dbeaver.model.DBUtils;
 import org.jkiss.dbeaver.model.connection.DBPConnectionBootstrap;
-import org.jkiss.dbeaver.model.dpi.DPIContainer;
 import org.jkiss.dbeaver.model.exec.*;
 import org.jkiss.dbeaver.model.exec.jdbc.JDBCPreparedStatement;
 import org.jkiss.dbeaver.model.exec.jdbc.JDBCResultSet;
@@ -50,7 +49,6 @@ public class GenericExecutionContext extends JDBCExecutionContext implements DBC
         super(instance, purpose);
     }
 
-    @DPIContainer
     @NotNull
     @Override
     public GenericDataSource getDataSource() {
@@ -59,7 +57,7 @@ public class GenericExecutionContext extends JDBCExecutionContext implements DBC
 
     @Nullable
     @Override
-    public DBCExecutionContextDefaults getContextDefaults() {
+    public DBCExecutionContextDefaults<?,?> getContextDefaults() {
         return this;
     }
 
@@ -120,10 +118,10 @@ public class GenericExecutionContext extends JDBCExecutionContext implements DBC
             // If we have only one catalog then it is our selected entity
             if (dataSource.hasCatalogs() && dataSource.getCatalogs().size() == 1) {
                 dataSource.setSelectedEntityType(GenericConstants.ENTITY_TYPE_CATALOG);
-                selectedEntityName = dataSource.getCatalogs().get(0).getName();
+                selectedEntityName = dataSource.getCatalogs().getFirst().getName();
             } else if (dataSource.hasSchemas() && dataSource.getSchemas().size() == 1) {
                 dataSource.setSelectedEntityType(GenericConstants.ENTITY_TYPE_SCHEMA);
-                selectedEntityName = dataSource.getSchemas().get(0).getName();
+                selectedEntityName = dataSource.getSchemas().getFirst().getName();
             }
         }
     }
@@ -214,10 +212,9 @@ public class GenericExecutionContext extends JDBCExecutionContext implements DBC
     @Override
     public boolean supportsCatalogChange() {
         GenericDataSource dataSource = getDataSource();
-        if (!(dataSource.getInfo() instanceof GenericDataSourceInfo)) {
+        if (!(dataSource.getInfo() instanceof GenericDataSourceInfo info)) {
             return true;
         }
-        final GenericDataSourceInfo info = (GenericDataSourceInfo) dataSource.getInfo();
         if (dataSource.isSelectedEntityFromAPI() || !CommonUtils.isEmpty(dataSource.getQuerySetActiveDB())) {
             if (CommonUtils.isEmpty(dataSource.getSelectedEntityType())) {
                 return dataSource.hasCatalogs() && info.supportsCatalogSelection();
@@ -232,10 +229,9 @@ public class GenericExecutionContext extends JDBCExecutionContext implements DBC
     @Override
     public boolean supportsSchemaChange() {
         GenericDataSource dataSource = getDataSource();
-        if (!(dataSource.getInfo() instanceof GenericDataSourceInfo)) {
+        if (!(dataSource.getInfo() instanceof GenericDataSourceInfo info)) {
             return true;
         }
-        final GenericDataSourceInfo info = (GenericDataSourceInfo) dataSource.getInfo();
         if (dataSource.isSelectedEntityFromAPI() || !CommonUtils.isEmpty(dataSource.getQuerySetActiveDB())) {
             if (CommonUtils.isEmpty(dataSource.getSelectedEntityType())) {
                 return !dataSource.hasCatalogs() && dataSource.hasSchemas() && info.supportsSchemaSelection();
